refactor(layout): refactor

--- a/docs/app/partials/home.tmpl.html
+++ b/docs/app/partials/home.tmpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeCtrl" layout="vertical">
+<div ng-controller="HomeCtrl" layout="column">
   <md-content flex>
     <p>
       <a href="http://www.google.com/design/spec/material-design/">Material Design</a> is a specification for a unified system of visual, motion, and interaction design that adapts across different devices.
@@ -11,7 +11,7 @@
     </p>
   </md-content>
 
-  <md-content layout="horizontal" layout-align="center center" style="padding-top: 50px">
+  <md-content layout="row" layout-align="center center" style="padding-top: 50px">
     <iframe width="560" height="315" title="Material Design" src="//www.youtube.com/embed/Q8TXgCzxEnw" frameborder="0" allowfullscreen></iframe>
   </md-content>
 
