--- a/docs/app/partials/layout-alignment.tmpl.html
+++ b/docs/app/partials/layout-alignment.tmpl.html
@@ -18,7 +18,7 @@
     each item will "stretch" the cross axis, which is explained later.
   </p>
   <div class="code-view">
-    <div layout="horizontal" layout-align="center" class="inline-demo">
+    <div layout="row" layout-align="center" class="inline-demo">
       <div>center</div>
       <div>center</div>
     </div>
