--- a/src/components/button/demoBasicUsage/index.html
+++ b/src/components/button/demoBasicUsage/index.html
@@ -2,7 +2,7 @@
 <div ng-controller="AppCtrl">
   <md-content >
 
-    <section layout="vertical" layout-sm="horizontal" layout-align="center center">
+    <section layout="row" layout-phone="column" layout-align="center center">
       <md-button>Button</md-button>
       <md-button noink class="md-primary">Primary (noink)</md-button>
       <md-button disabled class="md-primary">Disabled</md-button>
@@ -10,7 +10,7 @@
       <div class="label">flat</div>
     </section>
 
-    <section layout="vertical" layout-sm="horizontal" layout-align="center center">
+    <section layout="row" layout-phone="column" layout-align="center center">
       <md-button class="md-raised">Button</md-button>
       <md-button class="md-raised md-primary">Primary</md-button>
       <md-button disabled class="md-raised md-primary">Disabled</md-button>
@@ -18,7 +18,7 @@
       <div class="label">raised</div>
     </section>
 
-    <section layout="vertical" layout-sm="horizontal" layout-align="center center">
+    <section layout="row" layout-phone="column" layout-align="center center">
         <md-button class="md-fab" aria-label="Time">
             <md-icon icon="/img/icons/ic_access_time_24px.svg" style="width: 24px; height: 24px;"></md-icon>
         </md-button>
@@ -37,13 +37,13 @@
       <div class="label">FAB</div>
     </section>
 
-    <section layout="vertical" layout-sm="horizontal" layout-align="center center">
+    <section layout="row" layout-phone="column" layout-align="center center">
         <md-button class="">Reset</md-button>
         <md-button class="">RSVP</md-button>
       <div class="label">Button Group</div>
     </section>
 
-    <section layout="vertical" layout-sm="horizontal" layout-align="center center">
+    <section layout="row" layout-phone="column" layout-align="center center">
       <md-button class="md-primary" md-theme="green">Button</md-button>
       <md-button class="md-primary md-raised" md-theme="indigo">Button</md-button>
       <md-button class="md-primary md-raised" md-theme="orange">Button</md-button>
