--- a/src/components/dialog/demoBasicUsage/dialog1.tmpl.html
+++ b/src/components/dialog/demoBasicUsage/dialog1.tmpl.html
@@ -3,7 +3,7 @@
     <h2>Permissions</h2>
     <p>This app wants every permission you can offer, plus more. It's likely doing something fishy, like beaming your contact info to aliens.</p>
   </md-content>
-  <div class="md-actions" layout="horizontal" layout-align="end">
+  <div class="md-actions" layout="row" layout-align="end">
     <md-button ng-click="cancel()">
       Cancel
     </md-button>
